--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <servlet>
-        <servlet-name>ClothesServlet</servlet-name>
-        <servlet-class>controller.ClothesServlet</servlet-class>
+        <servlet-name>MovieServlet</servlet-name>
+        <servlet-class>servlet.MovieServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ClothesServlet</servlet-name>
-        <url-pattern>/get</url-pattern>
+        <servlet-name>MovieServlet</servlet-name>
+        <url-pattern>/movie</url-pattern>
     </servlet-mapping>
 </web-app>
